<resources>
    <string name="app_name">Sit Poll</string>
    <string name="sit_poll">Sit Poll</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_mainvoteactivity">mainvoteactivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="create_poll">Create Poll</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="string_c">C</string>
    <string name="username">Username</string>
    <string name="sample_poll">Sample Poll</string>


        <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
        <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
        <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
        <!-- Twitter consumer key and secret -->
        <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
        <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="enter_email">Enter Email</string>
    <string name="log_in">Log in</string>
    <string name="or">----------------------OR----------------------</string>
    <string name="or">----------------------OR----------------------</string>
    <string name="new_here_create_an_account">New Here? Create an Account</string>

</resources>